[tool.poetry]
name = "my-toolbox"
version = "0.1.0"
description = "Primary commit with major changes"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
